--- a/packages/theme-chalk/src/message.scss
+++ b/packages/theme-chalk/src/message.scss
@@ -74,9 +74,22 @@
     padding: 0;
     font-size: 14px;
     line-height: 1;
+
+    display: table-cell;
     &:focus {
       outline-width: 0;
     }
+  }
+
+  @include e(title) {
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: bold;
+    margin: 0 0 5px 0;
+  }
+
+  & .el-message__description {
+    font-size: 12px;
   }
 
   @include e(closeBtn) {
