--- a/packages/theme-chalk/src/tooltip.scss
+++ b/packages/theme-chalk/src/tooltip.scss
@@ -108,6 +108,11 @@
       color: $--tooltip-color;
     }
 
+    @include when(round) {
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+      border-radius: 20px;
+    }
+
     @include when(light) {
       background: $--tooltip-color;
       border: 1px solid $--tooltip-fill;
