--- a/packages/theme-chalk/src/popover.scss
+++ b/packages/theme-chalk/src/popover.scss
@@ -7,8 +7,8 @@
   background: $--popover-background-color;
   min-width: 150px;
   border-radius: 4px;
-  border: 1px solid $--popover-border-color;
-  padding: $--popover-padding;
+  //border: 1px solid $--popover-border-color;
+  //padding: $--popover-padding;
   z-index: $--index-popper;
   color: $--color-text-regular;
   line-height: 1.4;
@@ -18,14 +18,84 @@
   word-break: break-all;
 
   @include m(plain) {
-    padding: $--popover-padding-large;
+    //padding: $--popover-padding-large;
   }
 
-  @include e(title) {
-    color: $--popover-title-font-color;
-    font-size: $--popover-title-font-size;
-    line-height: 1;
-    margin-bottom: 12px;
+  @include e(header) {
+    padding: 10px;
+    border-radius: 4px 4px 0 0;
+
+    @include e(title) {
+      color: $--popover-title-font-color;
+      font-size: $--popover-title-font-size;
+      line-height: 1;
+      margin-bottom: 12px;
+    }
+
+    @include e(headerbtn) {
+      position: absolute;
+      top: 10px;
+      right: $--dialog-padding-primary;
+      padding: 0;
+      background: transparent;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      font-size: $--message-close-size;
+
+      .el-dialog__close {
+        color: $--color-info;
+      }
+
+      &:focus, &:hover {
+        .el-dialog__close {
+          color: $--color-primary;
+        }
+      }
+    }
+
+    @include when(bg) {
+      color: #FFFFFF;
+      background: $--color-primary;
+
+      @include e(title) {
+        color: #FFFFFF;
+      }
+
+      @include e(headerbtn) {
+        .el-dialog__close {
+          color: $--color-info;
+        }
+
+        &:focus, &:hover {
+          .el-dialog__close {
+            color:  #FFFFFF;
+          }
+        }
+      }
+    }
+
+    @include when(bg-center) {
+      text-align: center;
+      color: #FFFFFF;
+      background: $--color-primary;
+
+      @include e(title) {
+        color: #FFFFFF;
+      }
+
+      @include e(headerbtn) {
+        .el-dialog__close {
+          color: $--color-info;
+        }
+
+        &:focus, &:hover {
+          .el-dialog__close {
+            color:  #FFFFFF;
+          }
+        }
+      }
+    }
   }
 
   @include e(reference) {
@@ -36,5 +106,9 @@
 
   &:focus:active, &:focus {
     outline-width: 0;
+  }
+
+  @include e(content) {
+    padding: $--popover-padding;
   }
 }
