--- a/packages/theme-chalk/src/mixins/config.scss
+++ b/packages/theme-chalk/src/mixins/config.scss
@@ -2,4 +2,4 @@ $namespace: 'el';
 $element-separator: '__';
 $modifier-separator: '--';
 $state-prefix: 'is-';
-$wx-namespace: 'wx';
+$wxlnamespace: 'wxl';
